--- a/prima_app/templates/index.html
+++ b/prima_app/templates/index.html
@@ -11,6 +11,7 @@
     <li><a href="{% url 'prima_app:lista'%}">lista</a></li>
     <li><a href="{% url 'prima_app:chiSiamo'%}">chi Siamo</a></li>
     <li><a href="{% url 'prima_app:variabili'%}">variabili</a></li>
+    <li><a href="/">Index root</a></li>
     
 </body>
 </html>
