--- a/templates/index_root.html
+++ b/templates/index_root.html
@@ -8,7 +8,7 @@
 <body>
     <li><a href="/admin">Pannello admin</a></li>
     <li><a href="{% url 'prima_app:index' %}">Prima app</a></li>
-    <li><a href="{% url 'seconda_app:index' %}">Seconda app</a></li>
+    <li><a href="{% url 'seconda_app:index2' %}">Seconda app</a></li>
     
 </body>
 </html>
