--- a/seconda_app/templates/index2.html
+++ b/seconda_app/templates/index2.html
@@ -8,6 +8,7 @@
     <ol> 
         <li><a href="{% url 'seconda_app:es_if'%}">es_if</a></li>
         <li><a href="{% url 'seconda_app:if_else_elif'%}">if_else_elif</a></li>
+        <li><a href="{% url 'seconda_app:es_for'%}">es_for</a></li>
         <li><a href="/">Index root</a></li>
     </ol> 
 </body> 
