--- a/seconda_app/templates/es_for.html
+++ b/seconda_app/templates/es_for.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title></head>
-<body>
-    cicla una sequenza usando <b>forloop.counter</b>
+{% extends "base.html"%}
+
+{%block title%} {{block.super}} primo progetto| es for {%endblock title%}
+
+{%block content%}
+<h1>es for</h1>
+cicla una sequenza usando <b>forloop.counter</b>
     <br/>
     {% for x in list2 %}
         <i>{{forloop.counter}} </i>:{{ x }}<br>
@@ -59,6 +58,4 @@
             <i>{{ key }}: {{value}}</i>
         {%endfor%}
     </ul>
-    
-</body>
-</html>
+{%endblock content%}
