--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
-<!doctype html>
 {% load static %}
-<html lang="en">
+<!doctype html>
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -13,40 +13,55 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Primo progetto</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                seconda app
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="#">primo progetto</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              prima app
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{% url 'prima_app:welcome' %}">welcome</a>
+              <a class="dropdown-item" href="{% url 'prima_app:lista' %}">lista</a>
+              <a class="dropdown-item" href="{% url 'prima_app:homepage' %}">homepage</a>
+              <a class="dropdown-item" href="{% url 'prima_app:chiSiamo' %}">chi siamo</a>
+              <a class="dropdown-item" href="{% url 'prima_app:index' %}">index</a>
+            </div>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              seconda app
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{% url 'seconda_app:es_for' %}">es_for</a>
+              <a class="dropdown-item" href="{% url 'seconda_app:es_if' %}">es_if</a>
+              <a class="dropdown-item" href="{% url 'seconda_app:if_else_elif' %}">if_else_elif</a>
+              <a class="dropdown-item" href="{% url 'seconda_app:index2' %}">index</a>
+              
+              
+            </div>
+          </li>
+        </ul>
+       
+      </div>
+    </nav>
+    <div class="container my-4">
+      <!--servirà per inserire i contenuti della pagina-->
+      {%block content%}
+      {%endblock%}
+      <!--serrvirà per inserire il codice javascript-->
+      {%block script%}
+      {%endblock script%}
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
