--- a/prima_app/templates/index.html
+++ b/prima_app/templates/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="it">
-<head> 
-    <meta charset="UTF-8"> 
-    <title>Index</title> 
-</head> 
-<body> 
-    <ol> 
-        <li><a href="{% url 'prima_app:homepage'%}">Home page benvenuto</a></li>
-        <li><a href="{% url 'prima_app:welcome'%}">Welcome</a></li> 
-        <li><a href="{% url 'prima_app:lista'%}">Lista</a></li> 
-        <li><a href="{% url 'prima_app:chiSiamo'%}">Chi siamo</a></li> 
-        <li><a href="/">Index root</a></li>
-    </ol> 
-</body> 
-</html>
+{% extends "base.html"%}
+
+{%block title%} {{block.super}} primo progetto| index {%endblock title%}
+
+{%block content%}
+<h1>index</h1>
+<ol> 
+    <li><a href="{% url 'prima_app:homepage'%}">Home page benvenuto</a></li>
+    <li><a href="{% url 'prima_app:welcome'%}">Welcome</a></li> 
+    <li><a href="{% url 'prima_app:lista'%}">Lista</a></li> 
+    <li><a href="{% url 'prima_app:chiSiamo'%}">Chi siamo</a></li> 
+    <li><a href="/">Index root</a></li>
+</ol> 
+
+{%endblock content%}
