--- a/prima_app/templates/welcome.html
+++ b/prima_app/templates/welcome.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-</head>
-<body>
-    <h1>Welcome</h1>
-</body>
-</html>
+{% extends "base.html"%}
+
+{%block title%} {{block.super}} primo progetto| welcome {%endblock title%}
+
+{%block content%}
+<h1>welcome</h1>
+
+{%endblock content%}
