--- a/templates/index_root.html
+++ b/templates/index_root.html
@@ -7,5 +7,8 @@
 <li><a href="/admin">Pannello admin</a></li>
     <li><a href="{% url 'prima_app:index' %}">Prima app</a></li>
     <li><a href="{% url 'seconda_app:index2' %}">Seconda app</a></li>
+    <li><a href="{% url 'news:index3' %}">News</a></li>
+
+   
 
 {%endblock content%}
