--- a/news/templates/index3.html
+++ b/news/templates/index3.html
@@ -6,6 +6,7 @@
 <h1>index</h1>
 <ol>
     <li><a href="{% url 'news:visualizza' %}">visualizza</a></li>
+    <li><a href="{% url 'news:query' %}">query</a></li>
 
     <li><a href="/">Index root</a></li>
 </ol> 
