--- a/templates/index_root.html
+++ b/templates/index_root.html
@@ -8,6 +8,7 @@
     <li><a href="{% url 'prima_app:index' %}">Prima app</a></li>
     <li><a href="{% url 'seconda_app:index2' %}">Seconda app</a></li>
     <li><a href="{% url 'news:index3' %}">News</a></li>
+    <li><a href="{% url 'corsi_formazione:index4' %}">corsi_formazione</a></li>
 
    
 
