--- a/news/templates/visualizza.html
+++ b/news/templates/visualizza.html
@@ -1,21 +1,16 @@
-{% extends 'base.html'%}
-{%block title%}
-    Articoli e Giornalisti
-{%endblock title%}
+{% extends 'base.html' %}
 {%block content%}
- <h4>Articoli:</h4>
     {% for articolo in articoli %}
-        <p><strong>Titolo: </strong><a href="{% url 'news:art' articolo.pk %}">{{ articolo.titolo }}</a></p>
-        <p><strong>Contenuto: </strong>{{ articolo.contenuto }}</p>
-        <p><strong>Autore: </strong>{{ articolo.giornalista }}</p>
+        <p><strong>Titolo: </strong>
+        <a href="/news/articoli/{{articolo.id}}">{{articolo.titolo}}</a>
+        </p>
+        <p><strong>Contenuto: </strong>
+            {{ articolo.contenuto }}
+        </p>
+        <p><strong>Autore: </strong>
+            <a href= "news/giornalista_detail/{{articolo.giornalista.id}}">{{articolo.giornalista}}</a>
+        </p>
+            
         <hr>
-{% endfor %}
-
-<h4>Giornalisti:</h4>
-
-    {% for giornalista in giornalisti %}
-        <p><strong>Nome: </strong>{{ giornalista.nome }}</p>
-        <p><strong>Cognome: </strong>{{ giornalista.cognome }}</p>
-        <hr>
-{% endfor %}
-{%endblock content%}
+    {% endfor %}
+    {%endblock%}
